--- a/src/App.scss
+++ b/src/App.scss
@@ -91,6 +91,10 @@
   border: 0;
 }
 :root:root{
+  // YD
   // --adm-color-primary: #6B7BFF;
+  // 泰国
   --adm-color-primary: #00D9B5;
+  //越南
+  // --adm-color-primary: #6B7BFF;
 }
