--- a/src/views/mine/index.scss
+++ b/src/views/mine/index.scss
@@ -192,10 +192,10 @@
           color: white;
           transform: scale(1);
         }
-        p{
+        p {
           font-size: 12px;
           color: rgba(255, 255, 255, 0.8);
-          transform: scale(.8);
+          transform: scale(0.8);
         }
       }
     }
@@ -221,6 +221,11 @@
         color: #3245e3;
       }
     }
+  }
+  .mine-nav-asx {
+    background: url("../../assets/images/home_asx/mine_bg.png");
+    background-size: 100% 100%;
+    height: 250px;
   }
   .mine-assets-manage {
     // transform: translateY(-100px);
@@ -332,6 +337,34 @@
     }
     .manage-title::before {
       display: none;
+    }
+  }
+  .mine-assets-manage-asx {
+    background-color: rgba(255, 255, 255, 0.88);
+    width: calc(100% - 40px);
+    margin-top: -114px;
+    text-align: left;
+    padding: 0;
+    overflow: hidden;
+    padding-bottom: 6px;
+    .manage-title {
+      display: inline-block;
+      padding: 4px 8px 4px 12px;
+      background: linear-gradient(
+        95deg,
+        rgba(101, 136, 241, 0.28) 0%,
+        rgba(72, 116, 246, 0) 100%
+      );
+    }
+    .manage-title::before {
+      display: none;
+    }
+    .with-three {
+      padding-top: 8px;
+      text-align: center;
+      li {
+        margin-top: 0;
+      }
     }
   }
   .t-100 {
