--- a/src/App.scss
+++ b/src/App.scss
@@ -94,7 +94,7 @@
   // YD
   // --adm-color-primary: #6B7BFF;
   // 泰国
-  --adm-color-primary: #00D9B5;
-  //越南
-  // --adm-color-primary: #6B7BFF;
+  // --adm-color-primary: #00D9B5;
+  //ASX
+  --adm-color-primary: #6B7BFF;
 }
