--- a/src/components/down_btn/index.scss
+++ b/src/components/down_btn/index.scss
@@ -24,3 +24,13 @@
     margin-right: 4px;
   }
 }
+.asx-down{
+  .down-btn{
+    img:last-child{
+      height: 38px;
+    }
+    img:first-child{
+      margin-right: 4px;
+    }
+  }
+}
