--- a/src/views/down_asx/index.scss
+++ b/src/views/down_asx/index.scss
@@ -1,4 +1,4 @@
-.down-index-en {
+.down-index-asx {
   width: 100%;
   height: 100vh;
   position: fixed;
@@ -10,22 +10,34 @@
   padding-left: 28px;
   flex-direction: column;
   justify-content: center;
+  .down-remark {
+    position: relative;
+    z-index: 200;
+    text-align: left;
+    transform: translateY(-176px);
+    color: rgba(50, 38, 88, 0.6);
+    font-size: 14px;
+    line-height: 16px;
+  }
   img {
     width: 100%;
   }
   .click-box-use-to-rem {
-    transform: translateY(40px);
-    text-align: left;
+    position: absolute;
+    left: 50%;
+    width: 130px;
+    margin-left: -75px;
+    top: 264px;
     z-index: 200;
     text-align: left;
-    padding: 8px 14px;
-    background: rgba(255, 255, 255, 0.21);
+    padding: 8px 21px 6px 10px;
+    background: rgba(0, 89, 186, 0.29);
     display: flex;
     margin-top: 16px;
     align-items: center;
-    border-radius: 27px;
-    padding-right: 22px;
-    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 8px;
+    backdrop-filter: blur(1px);
+    padding-right: 20px;
     .iconfont {
       font-size: 22px;
       color: white;
@@ -43,12 +55,6 @@
         font-weight: bold;
       }
     }
-  }
-  .google-btn {
-    padding-right: 8px !important;
-  }
-  .right-ios{
-    transform: translateY(0);
   }
   .bg-img {
     position: absolute;
