--- a/src/views/forget/index.scss
+++ b/src/views/forget/index.scss
@@ -247,6 +247,121 @@
     }
   }
 }
+.forget-pass-asx {
+  background-color: #f6f7f8;
+  .int-bg-box {
+    height: 296px;
+    background: linear-gradient(180deg, #8abff6 0%, #f8f8f8 100%);
+  }
+  .register-way {
+    ul {
+      li {
+        position: relative;
+        .active-line {
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          width: 100%;
+          height: 3px;
+          border-radius: 2px;
+          background: linear-gradient(
+            90deg,
+            #364ffc 0%,
+            rgba(54, 79, 252, 0.15) 100%
+          );
+          width: 0;
+          transition: 0.3s all;
+        }
+      }
+    }
+    .active-intway {
+      background-color: rgba(0, 0, 0, 0)!important;
+      .active-line {
+        width: 100%;
+      }
+    }
+  }
+  .up-bg-box {
+    .page-remark {
+      img {
+        width: 108px;
+        height: 40px;
+      }
+      p {
+        color: #364ffc;
+        font-weight: 800;
+        font-size: 19px;
+        text-shadow: 0px 2px 4px rgba(47, 71, 231, 0.26);
+      }
+    }
+    .login-box {
+      width: calc(100% - 24px);
+      margin: 0 auto;
+      margin-top: 12px;
+      background-color: rgba(255, 255, 255, 0.12);
+      padding: 24px 22px;
+      border-radius: 8px;
+      border: 1px solid rgba(224, 228, 252, 0.35);
+      position: relative;
+      .top-border {
+        width: 100%;
+        border-top-left-radius: 8px;
+        border-top-right-radius: 8px;
+        border: 1px solid;
+        border-image: linear-gradient(
+            180deg,
+            rgba(156, 167, 255, 1),
+            rgba(57, 69, 207, 0)
+          )
+          1 1;
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 75px;
+        border-bottom: 0;
+      }
+      .box-public {
+        p {
+          color: #666;
+          margin-bottom: 10px;
+        }
+        input {
+          border-radius: 22px;
+          padding-left: 14px;
+        }
+        span {
+          display: none;
+        }
+        .send-code {
+          top: 40px;
+        }
+      }
+      .other-p-l{
+        input{
+          padding-left: 60px;
+        }
+        .select-perfix{
+          left: 14px;
+        }
+      }
+      .select-country {
+        span {
+          display: block;
+        }
+      }
+      .login-btn {
+        button {
+          background-color: #4e63f4;
+        }
+      }
+      .register-btn {
+        span {
+          color: #1677ff;
+        }
+      }
+    }
+  }
+}
 @media screen and (min-width: 1280px) {
   .forget-pass {
     width: 750px;
