--- a/src/views/login/index.scss
+++ b/src/views/login/index.scss
@@ -110,7 +110,7 @@
   }
 }
 .login-index-new {
-  background-color: #F7FCFF;
+  background-color: #f7fcff;
   .int-bg-box {
     height: 474px;
     background: url("../../assets/images/int_bg_new.png");
@@ -131,26 +131,79 @@
       margin-top: 24px;
       padding: 20px 22px;
       border: 1px solid #e0e4fc;
-      .box-public{
+      .box-public {
         margin-bottom: 0;
-        p{
+        p {
           color: #666;
           margin-bottom: 10px;
         }
-        input{
+        input {
           border-radius: 22px;
           padding-left: 14px;
         }
-        span{
+        span {
           display: none;
         }
       }
-      .need-top{
+      .need-top {
         margin-top: 24px;
       }
-      .login-btn{
-        button{
-          background-color: #5058C5;
+      .login-btn {
+        button {
+          background-color: #5058c5;
+        }
+      }
+      .register-btn {
+        span {
+          color: #1677ff;
+        }
+      }
+    }
+  }
+}
+.login-index-asx {
+  background-color: #f6f7f8;
+  .int-bg-box {
+    height: 296px;
+    background: linear-gradient(180deg, #8abff6 0%, #f8f8f8 100%);
+  }
+  .up-bg-box {
+    .page-remark {
+      img {
+        width: 108px;
+        height: 40px;
+      }
+      p {
+        color: #364ffc;
+        font-weight: 800;
+        font-size: 19px;
+        text-shadow: 0px 2px 4px rgba(47, 71, 231, 0.26);
+      }
+    }
+    .login-box {
+      width: calc(100% - 24px);
+      margin: 0 auto;
+      margin-top: 32px;
+      background-color: rgba(255, 255, 255, 0.12);
+      padding: 24px 22px;
+      border-radius: 8px;
+      border: 1px solid rgba(224, 228, 252, 0.35);
+      .box-public {
+        p {
+          color: #666;
+          margin-bottom: 10px;
+        }
+        input {
+          border-radius: 22px;
+          padding-left: 14px;
+        }
+        span {
+          display: none;
+        }
+      }
+      .login-btn {
+        button {
+          background-color: #4e63f4;
         }
       }
       .register-btn{
