--- a/src/views/mine/index.scss
+++ b/src/views/mine/index.scss
@@ -94,6 +94,22 @@
             font-size: 13px;
             color: #999;
             margin-top: 6px;
+            .auth-card {
+              display: flex;
+              align-items: center;
+              padding: 2px 6px;
+              padding-bottom: 0;
+              background-color: rgba(242, 248, 255, 0.29);
+              border-radius: 4px;
+              img {
+                width: 14px;
+                height: 14px;
+                margin-right: 4px;
+              }
+              font-size: 12px;
+              color: #5359e9;
+              font-weight: 500;
+            }
           }
         }
       }
@@ -115,6 +131,33 @@
         img:last-child {
           width: 11px;
           height: 8px;
+        }
+      }
+      .right-download {
+        border-radius: 8px;
+        background-color: rgba(255, 255, 255, 0.3);
+        border: 2px solid white;
+        backdrop-filter: blur(4px);
+        padding: 0;
+        color: #2761c8;
+        height: 22px;
+        padding-right: 4px;
+        font-weight: 500;
+        .icon {
+          width: 20px;
+          height: 20px;
+          border-radius: 8px;
+          border: 2px solid white;
+          background-color: rgba(255, 255, 255, 0.49);
+          backdrop-filter: blur(1px);
+          transform: translateX(-4px);
+          display: flex;
+          justify-content: center;
+          color: #2761C8;
+          align-items: center;
+          .iconfont {
+            font-size: 12px;
+          }
         }
       }
     }
@@ -364,6 +407,98 @@
       text-align: center;
       li {
         margin-top: 0;
+      }
+    }
+  }
+  .mine-assets-manage-asx-reset {
+    width: 100%;
+    border-radius: 0;
+    box-shadow: none;
+    padding-top: 24px;
+    padding: 24px 12px 16px;
+    .manage-title::before {
+      display: none;
+    }
+    .manage-title {
+      font-weight: 600;
+    }
+    .asx-invite-msg {
+      display: flex;
+      .left-link {
+        width: 152px;
+        margin-right: 8px;
+        text-align: left;
+        ul {
+          display: flex;
+          flex-direction: column;
+          li {
+            height: 58px;
+            width: 100%;
+            padding: 12px 14px;
+            display: flex;
+            align-items: center;
+            padding-right: 50px;
+            line-height: 16px;
+            font-size: 14px;
+            font-weight: 500;
+            color: #864d10;
+            margin-top: 5px;
+          }
+          li:first-child {
+            background: url("../../assets/images/home_asx/link_bg.png");
+            background-size: 100% 100%;
+            margin-top: 0;
+          }
+          li:last-child {
+            background: url("../../assets/images/home_asx/rules_bg.png");
+            background-size: 100% 100%;
+          }
+        }
+      }
+      .right-level {
+        flex: 1;
+        ul {
+          li {
+            width: 50%;
+            margin-top: 0;
+            height: 60px;
+            border: 1px solid #efefef;
+            box-sizing: border-box;
+            padding-top: 3px;
+          }
+          li:first-child {
+            border-bottom: 0;
+          }
+          li:nth-child(2) {
+            border-bottom: 0;
+          }
+        }
+      }
+    }
+  }
+  .security-asx {
+    margin-top: 0 !important;
+    padding: 0;
+    padding-bottom: 12px;
+    .manage-title {
+      padding-left: 12px;
+    }
+    ul {
+      border-top: 1px solid #efefef;
+      border-bottom: 1px solid #efefef;
+      margin-top: 12px;
+      padding: 0 12px;
+      li {
+        padding-top: 15px;
+        margin-top: 0 !important;
+        padding-bottom: 10px;
+      }
+      li:nth-child(2) {
+        border-left: 1px solid #efefef;
+        border-right: 1px solid #efefef;
+      }
+      li:nth-child(3) {
+        border-right: 1px solid #efefef;
       }
     }
   }
