--- a/src/views/register/index.scss
+++ b/src/views/register/index.scss
@@ -263,25 +263,25 @@
       margin: 0 auto;
       margin-top: 30px;
       background-color: white;
-      border: 1px solid #E0E4FC;
+      border: 1px solid #e0e4fc;
       padding: 26px 22px;
       border-radius: 8px;
-      .box-public{
-        p{
+      .box-public {
+        p {
           color: #666;
         }
-        input{
+        input {
           border-radius: 22px;
         }
       }
-      .read-protocol{
-        span{
-          color: #1677FF;
+      .read-protocol {
+        span {
+          color: #1677ff;
         }
       }
-      .login-btn{
-        button{
-          background-color: #5058C5;
+      .login-btn {
+        button {
+          background-color: #5058c5;
         }
       }
     }
@@ -368,7 +368,104 @@
     }
   }
 }
-
+.register-index-asx {
+  background-color: #f6f7f8;
+  .bg-box {
+    height: 296px;
+    background: linear-gradient(180deg, #8abff6 0%, #f8f8f8 100%);
+  }
+  .up-bg-box {
+    .page-remark {
+      img {
+        width: 108px;
+        height: 40px;
+      }
+      p {
+        color: #364ffc;
+        font-weight: 800;
+        font-size: 19px;
+        text-shadow: 0px 2px 4px rgba(47, 71, 231, 0.26);
+      }
+    }
+    .register-way {
+      ul {
+        li {
+          position: relative;
+          .active-line {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 3px;
+            border-radius: 2px;
+            background: linear-gradient(
+              90deg,
+              #364ffc 0%,
+              rgba(54, 79, 252, 0.15) 100%
+            );
+            width: 0;
+            transition: .3s all;
+          }
+        }
+      }
+      .active-intway {
+        background-color: rgba(0, 0, 0, 0);
+        .active-line{
+          width: 100%;
+        }
+      }
+    }
+    .login-box {
+      width: calc(100% - 24px);
+      margin: 0 auto;
+      margin-top: 12px;
+      background-color: rgba(255, 255, 255, 0.12);
+      padding: 24px 22px;
+      border-radius: 8px;
+      border: 1px solid rgba(224, 228, 252, 0.35);
+      position: relative;
+      .box-public {
+        p {
+          color: #666;
+          margin-bottom: 10px;
+        }
+        input {
+          border-radius: 22px;
+          padding-left: 14px;
+        }
+        span {
+          display: none;
+        }
+        .send-code {
+          top: 40px;
+        }
+      }
+      .other-p-l{
+        input{
+          padding-left: 60px;
+        }
+        .select-perfix{
+          left: 14px;
+        }
+      }
+      .select-country {
+        span {
+          display: block;
+        }
+      }
+      .login-btn {
+        button {
+          background-color: #4e63f4;
+        }
+      }
+      .register-btn {
+        span {
+          color: #1677ff;
+        }
+      }
+    }
+  }
+}
 @media screen and (min-width: 1280px) {
   .register-index {
     width: 750px;
